<resources>
    <string name="app_name">AircraftWar</string>
    <string name="title">飞机大战</string>
    <string name="easyGame">简单模式</string>
    <string name="normalGame">普通模式</string>
    <string name="hardGame">困难模式</string>
    <string name="music">音效</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="ranking">排名</string>
    <string name="player_name">玩家名</string>
    <string name="score">得分</string>
    <string name="record_time">游戏时间</string>
    <string name="ranking_board">排行榜</string>
    <string name="delete">删除</string>
    <string name="offline">单机模式</string>
    <string name="online">联机模式</string>
    <string name="waiting">等待对手连接</string>
</resources>