<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="98dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/offline"
            android:layout_width="169dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/offline"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/online"
            android:layout_width="169dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/online"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/music_switch"
            android:layout_width="114dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:showText="true"
            android:text="@string/music"
            android:textColor="@color/white"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/online"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>
</LinearLayout>